--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
+    "libsql": "0.3.19",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
