--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "libsql": "0.4.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.7",
+    "next-intl": "^3.18.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
