--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "input-otp": "^1.2.4",
     "libsql": "0.4.1",
     "lucide-react": "^0.428.0",
-    "next": "14.2.7",
+    "next": "14.2.8",
     "next-intl": "^3.18.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -59,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
     "react-resizable-panels": "^2.1.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
