--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.2.0",
     "input-otp": "^1.2.4",
     "libsql": "0.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.428.0",
     "next": "14.2.8",
     "next-auth": "^5.0.0-beta.20",
