--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.1",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
