--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@libsql/client": "^0.9.0",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -55,7 +57,6 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.428.0",
     "next": "14.2.8",
-    "next-auth": "^5.0.0-beta.20",
     "next-intl": "^3.18.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
