--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -55,7 +59,6 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.428.0",
     "next": "14.2.8",
-    "next-auth": "^5.0.0-beta.20",
     "next-intl": "^3.18.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -63,7 +66,6 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
-    "react-intersection-observer": "^9.13.1",
     "react-resizable-panels": "^2.1.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
