--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 BASE_URL=http://localhost:3000/api
+
+# Turso
 TURSO_AUTH_TOKEN=
 TURSO_DATABASE_URL=
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
