--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-query-devtools": "^5.65.1",
+    "arctic": "^3.2.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,13 +61,13 @@
     "libsql": "0.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.428.0",
-    "next": "14.2.8",
+    "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^3.26.3",
     "next-themes": "^0.3.0",
-    "react": "^19.0.0",
+    "react": "19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
@@ -83,14 +84,18 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tanstack/eslint-plugin-query": "^5.65.0",
     "@types/node": "^20.17.16",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
